# neural_networks

./: .gitignore  NN_lab1.ipynb  README.md  pyproject.toml
dense_neural_networks/: Corrected_Final_NN_lab1 (2).ipynb  NN_lab1.ipynb
reinforcement_learning/: 001-gym-environment.ipynb  002-solving-mdps.ipynb  003-rnn.ipynb  004-sarsa-experience-replay.ipynb  005-dqn_cart_pole.ipynb  atari_wrappers.py  mdp.py  replay_buffer.py  utils.py
time_series/: NN_lab4.ipynb  dataset.py
