[tool.poetry]
name = "neuralnetworks"
version = "0.1.0"
description = ""
authors = ["rmajor <roman.yu.major@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
torch = "^2.3.0"
tensorflow = "^2.16.1"
jupyter = "^1.0.0"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
