[tool.poetry]
name = "neuralnetworks"
version = "0.1.0"
description = ""
authors = ["rmajor <roman.yu.major@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
torch = "^2.3.0"
tensorflow = "^2.16.1"
jupyter = "^1.0.0"
scikit-learn = "^1.5.0"
torchvision = "^0.18.0"
gdown = "^5.2.0"
tqdm = "^4.66.4"
seaborn = "^0.13.2"
gymnasium = "^0.29.1"
scipy = "^1.13.1"
transformers = "^4.41.2"
ucimlrepo = "^0.0.7"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
